[package]
name = "openapi"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
ferris-says = "0.2"
console_log = { version = "0.2", features = ["color"] }
futures = "0.3"
tokio = { version = "1.21.2", features = ["full"] }


[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
